dropdown implemented haven't tested

--- a/src/app/modules/timesheets/pages/timesheet-creation/timesheet-creation.component.html
+++ b/src/app/modules/timesheets/pages/timesheet-creation/timesheet-creation.component.html
@@ -3,7 +3,7 @@
         <h3 class="display-4 mb-3">Create Timesheet</h3>
         <div class="dropdown-divider "></div>
         <shared-timesheet [editable]="editable" [timesheet]="timesheet" [projectDropdown]="projectDropdown"
-            [wpDropdown]="wpDropdown"> </shared-timesheet>
+            [employeeWPs]="employeeWPs"> </shared-timesheet>
         <div class="dropdown-divider my-3"></div>
 
         <div class="dropdown-divider my-3"></div>
