Timesheet list page complete

--- a/src/app/modules/timesheets/pages/timesheet-creation/timesheet-creation.component.html
+++ b/src/app/modules/timesheets/pages/timesheet-creation/timesheet-creation.component.html
@@ -1,5 +1,5 @@
 <div class="card mx-1">
-    <div class="card-body" *ngIf="ok">
+    <div class="card-body" *ngIf="stringToDate()">
         <h3 class="display-4 mb-3">Create Timesheet</h3>
         <div class="dropdown-divider "></div>
         <shared-timesheet [editable]="editable" [timesheet]="timesheet" [projectDropdown]="projectDropdown"
