--- a/src/app/modules/timesheets/pages/timesheets.component.html
+++ b/src/app/modules/timesheets/pages/timesheets.component.html
@@ -1,4 +1,7 @@
 <button type="button" class="btn btn-secondary" routerLink="creation">Create</button>
+
+<app-timesheet-list></app-timesheet-list>
+
 <h1>df</h1>
 <h1>df</h1>
 <h1>df</h1>
