timesheet view complete

--- a/src/app/core/layout/content-layout/content-layout.component.html
+++ b/src/app/core/layout/content-layout/content-layout.component.html
@@ -8,7 +8,8 @@
     <mat-sidenav-content>
         <app-breadcrumb></app-breadcrumb>
         <router-outlet></router-outlet>
+
     </mat-sidenav-content>
 </mat-sidenav-container>
 
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
