--- a/src/app/modules/timesheets/pages/timesheet-creation/timesheet-creation.component.html
+++ b/src/app/modules/timesheets/pages/timesheet-creation/timesheet-creation.component.html
@@ -1,18 +1,17 @@
-<div class="card mx-1">
-    <div class="card-body" *ngIf="stringToDate()">
+<div class="card mx-1" *ngIf="dataReady">
+    <div class="card-body">
         <h3 class="display-4 mb-3">Create Timesheet</h3>
+
         <div class="dropdown-divider "></div>
+
         <shared-timesheet [editable]="editable" [timesheet]="timesheet" [projectDropdown]="projectDropdown"
             [employeeWPs]="employeeWPs"> </shared-timesheet>
-        <div class="dropdown-divider my-3"></div>
 
         <div class="dropdown-divider my-3"></div>
+
         <div class="d-flex flex-row-reverse">
             <button type="button" class="btn btn-primary  m-1 px-3" (click)="onSave($event)">Save</button>
             <button type="button" class="btn btn-primary m-1 px-2" (click)="onSubmit($event)">Submit</button>
         </div>
-        <div class="dropdown-divider my-3"></div>
     </div>
-
-
 </div>
