--- a/src/app/modules/timesheets/pages/timesheet-list/timesheet-list.component.html
+++ b/src/app/modules/timesheets/pages/timesheet-list/timesheet-list.component.html
@@ -3,6 +3,9 @@
         <h3 class="display-4 mb-3">Timesheet List</h3>
         <div class="dropdown-divider "></div>
 
+        <div class="d-flex flex-row-reverse">
+            <button type="button" class="btn btn-primary my-2" routerLink="creation">Create</button>
+        </div>
 
         <!-- Table goes here -->
         <p-table [columns]="cols" [value]="timesheets">
@@ -35,7 +38,8 @@
                     </td>
 
                     <td>
-                        <button type="button" class="btn btn-link btn-sm" routerLink="view">View</button>
+                        <button type="button" class="btn btn-link btn-sm"
+                            [routerLink]="['view', rowData.timesheetId]">View</button>
                         <button *ngIf="rowData.status==='Inprogress'" type="button" class="btn btn-link btn-sm"
                             routerLink="update">Edit</button>
                     </td>
