--- a/src/app/modules/timesheets/pages/timesheet-view/timesheet-view.component.html
+++ b/src/app/modules/timesheets/pages/timesheet-view/timesheet-view.component.html
@@ -7,7 +7,7 @@
 
         <div class="dropdown-divider "></div>
 
-        <shared-timesheet *ngIf="timesheet" [editable]="false" [timesheet]="timesheet">
+        <shared-timesheet *ngIf="timesheet" [mode]="mode" [timesheet]="timesheet">
         </shared-timesheet>
 
         <div class="dropdown-divider my-3"></div>
