implement dropdown of timesheet creation

--- a/src/app/core/layout/nav/nav.component.html
+++ b/src/app/core/layout/nav/nav.component.html
@@ -1,8 +1,11 @@
 <ul class="list-group list-group-flush">
     <li class="list-group-item"><a routerLink="/content/employees">Employees</a></li>
     <li class="list-group-item"><a routerLink="/content/timesheets">Timesheets</a></li>
+    <li class="list-group-item"><a routerLink="/content/timesheets/approver/view/list">Pending Timsheets</a></li>
     <li class="list-group-item"><a routerLink="/content/reports">Reports</a></li>
     <li class="list-group-item">Morbi leo risus</li>
     <li class="list-group-item">Porta ac consectetur ac</li>
     <li class="list-group-item">Vestibulum at eros</li>
+
+
 </ul>
