--- a/src/app/modules/timesheets/pages/timesheet-approver-view-list/timesheet-approver-view-list.component.html
+++ b/src/app/modules/timesheets/pages/timesheet-approver-view-list/timesheet-approver-view-list.component.html
@@ -47,9 +47,7 @@
                     </td>
                     <td>
                         <button type="button" class="btn btn-link btn-sm"
-                            [routerLink]="['view', rowData.employeeId]">View</button>
-                        <button type="button" class="btn btn-link btn-sm"
-                            [routerLink]="['edit', rowData.employeeId]">Edit</button>
+                            [routerLink]="['/content/timesheets/approver/view/', rowData[timesheetId]]">View</button>
                     </td>
                 </tr>
             </ng-template>
